replaced some of the placeholder text/images

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <!--CAROUSEL of IMAGES-->
 
         <div class="carousel">
-            <div class="left-button">
-                <</div> <img class='current' src="img/hiking1.jpg" />
+            <div class="left-button"><</div> 
+            <img class='current' src="img/hiking1.jpg" />
                 <img src="img/hiking2.jpg" />
-                <img src="img/logo.png" />
-                <img src="#" />
+                <img src="img/guidrLogo.png" />
+                <img src="img/outdoor.png" />
                 <div class="right-button">></div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                 <!--Content Box 1-->
                 <div class="content-box text-left">
                     <div class="content">
-                        <h3>HEADLINE HEADLINE HEADLINE HEADLINE HEADLINE</h3>
+                        <h3>Create a Custom Profile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nobis cum deleniti maiores
                             officia quasi natus facilis, incidunt rerum blanditiis distinctio exercitationem,
                             praesentium assumenda nemo soluta ipsa corrupti consectetur modi.</p>
@@ -88,7 +88,7 @@
                 <!--Content Box 2-->
                 <div class="content-box text-right">
                     <div class="content">
-                        <h3>HEADLINE HEADLINE HEADLINE HEADLINE HEADLINE</h3>
+                        <h3>Log Your Trips</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nobis cum deleniti maiores
                             officia quasi natus facilis, incidunt rerum blanditiis distinctio exercitationem,
                             praesentium assumenda nemo soluta ipsa corrupti consectetur modi.</p>
@@ -101,15 +101,26 @@
                 <!--Content Box 3-->
                 <div class="content-box text-left">
                     <div class="content">
-                        <h3>HEADLINE HEADLINE HEADLINE HEADLINE HEADLINE</h3>
+                        <h3>Share with Friends</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nobis cum deleniti maiores
                             officia quasi natus facilis, incidunt rerum blanditiis distinctio exercitationem,
                             praesentium assumenda nemo soluta ipsa corrupti consectetur modi.</p>
                     </div>
                     <div class="body-img">
-                        <img src="img/hiking3.jpg" alt="Image">
+                        <img src="img/hiking1.jpg" alt="Image">
                     </div>
                 </div>
+                <!--Content Box 4-->
+                <div class="content-box text-right">
+                        <div class="content">
+                            <h3>Explore!</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nobis cum deleniti maiores
+                                officia quasi natus facilis, incidunt rerum blanditiis distinctio exercitationem,
+                                praesentium assumenda nemo soluta ipsa corrupti consectetur modi.</p>
+                        </div>
+                        <div class="body-img">
+                            <img src="img/hiking2.jpg" alt="Image">
+                        </div>
 
             </section>
         </section>
