--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -63,7 +63,7 @@
                     <div class="scrum-UX-content">
                         <h2>Scrum Master</h2>
                         <div class="meet-img">
-                            <img src="img/randomperson.jpg" alt="Adam Reid Photo">
+                            <img src="https://ca.slack-edge.com/T4JUEB3ME-UBAFDGR1N-14dd5da27830-48" alt="Adam Reid Photo">
                         </div>
                         <h4>Adam Reid</h4>
 
@@ -75,14 +75,14 @@
                         <nav class='git-linkedin-nav'>
                             <a href="https://github.com/iAmAdamReid"><i class="fa fa-github-square"></i> Adam's Github</a>
                             <br>
-                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                            <!--<a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>-->
                         </nav>
                     </div>
 
                     <div class="scrum-UX-content">
                         <h2>UX Designer</h2>
                         <div class="meet-img">
-                            <img src="img/randomperson.jpg" alt="OLU Durojaiye Photo">
+                            <img src="https://ca.slack-edge.com/T4JUEB3ME-UCPHPN0CU-3bd1cb776d3d-48" alt="OLU Durojaiye Photo">
                         </div>
                         <h4>OLU Durojaiye</h4>
 
@@ -107,7 +107,7 @@
                     <div class="UI-content">
                         <h2>User Interface Developer</h2>
                         <div class="meet-img">
-                            <img src="img/randomperson.jpg" alt="Daniel Starling Photo">
+                            <img src="https://ca.slack-edge.com/T4JUEB3ME-UDGHM4FDY-f32464088378-48" alt="Daniel Starling Photo">
                         </div>
                         <h4>Daniel Starling</h4>
 
@@ -125,13 +125,12 @@
                     <div class="UI-content">
                         <h2>User Interface Developer</h2>
                         <div class="meet-img">
-                            <img src="img/randomperson.jpg" alt="James Basile Photo">
+                            <img src="img/jb-linkedin (2).png" alt="James Basile Photo">
                         </div>
                         <h4>James Basile</h4>
 
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
-                            adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
-                            suscipit! Similique, at nam.</p>
+                        <p>James Basile is a Full Stack Web Developer from Philadelphia, PA. James is a graduate of Fordham University in the Bronx, NY and is a current Lambda School student who is proficient in HTML, CSS, and JavaScript. He enjoys going 
+                            on hikes with his dog, Daisy, on local trails in the Philly suburbs.</p>
 
 
                         <nav class='git-linkedin-nav'>
@@ -145,7 +144,7 @@
                     <div class="UI-content">
                         <h2>User Interface Developer</h2>
                         <div class="meet-img">
-                            <img src="img/randomperson.jpg" alt="Will Schulz Photo">
+                            <img src="https://ca.slack-edge.com/T4JUEB3ME-UEYAU0PMM-a23e6368d9a9-48" alt="Will Schulz Photo">
                         </div>
                         <h4>Will Shulz</h4>
 
@@ -155,7 +154,7 @@
                         <nav class='git-linkedin-nav'>
                             <a href="https://github.com/kittenman29"><i class="fa fa-github-square"></i> Will's Github</a>
                             <br>
-                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                            <!--<a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>-->
                         </nav>
                     </div>
                 </div>
@@ -168,7 +167,7 @@
                     <div class="front-content">
                         <h2>Front End Developer</h2>
                         <div class="meet-img">
-                            <img src="img/randomperson.jpg" alt="Will Schulz Photo">
+                            <img src="https://ca.slack-edge.com/T4JUEB3ME-UDLUVER6Z-1f5da589c1c1-48" alt="Will Schulz Photo">
                         </div>
                         <h4>David Flack</h4>
 
@@ -186,7 +185,7 @@
                     <div class="front-content">
                         <h2>Front End Developer</h2>
                         <div class="meet-img">
-                            <img src="img/randomperson.jpg" alt="Daniel Weinman Photo">
+                            <img src="https://ca.slack-edge.com/T4JUEB3ME-UD6M2UDDY-a903fb7349dc-48" alt="Daniel Weinman Photo">
                         </div>
                         <h4>Daniel Weinman</h4>
 
@@ -197,7 +196,7 @@
                             <a href="https://github.com/notontilt09"><i class="fa fa-github-square"></i> Daniel's
                                 Github</a>
                             <br>
-                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                            <!--<a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>-->
                         </nav>
                     </div>
                 </div>
@@ -209,7 +208,7 @@
                     <div class="back-content">
                         <h2>Back End Developer</h2>
                         <div class="meet-img">
-                            <img src="img/randomperson.jpg" alt="Holden Bucher Photo">
+                            <img src='https://ca.slack-edge.com/T4JUEB3ME-UCTPGN7K3-1ccf4ec178d8-48' alt="Holden Bucher Photo">
                         </div>
                         <h4>Holden Bucher</h4>
 
@@ -220,7 +219,7 @@
                             <a href="https://github.com/holdeelocks"><i class="fa fa-github-square"></i> Holden's
                                 Github</a>
                             <br>
-                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                            <!--<a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>-->
                         </nav>
                     </div>
                 </div>
